Edit button, UI colors, small backend fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -14,7 +14,7 @@
       </header>
 
       <section class="composer">
-        <textarea id="content" rows="4" placeholder="Write a note..."></textarea>
+        <textarea id="content" rows="5" placeholder="Write a note..."></textarea>
         <div class="row">
           <label class="check">
             <input type="checkbox" id="pinned" />
