Signup and Login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,14 @@
         <p class="sub">Minimal frontend for the Rust backend.</p>
       </header>
 
+      <section class="signup">
+        <input id="username" type="text" placeholder="Username" />
+        <input id="password" type="password" placeholder="Password" />
+        <button id="signup">Sign up</button>
+        <button id="login">Log in</button>
+        <span id="login-status" class="status"></span>
+      </section>
+
       <section class="composer">
         <textarea id="content" rows="5" placeholder="Write a note..."></textarea>
         <div class="row">
