Signout + Quality of life fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,9 @@
         <input id="username" type="text" placeholder="Username" />
         <input id="password" type="password" placeholder="Password" />
         <button id="signup">Sign up</button>
-        <button id="login">Log in</button>
-        <span id="login-status" class="status"></span>
+        <button id="signin">Sign in</button>
+        <button id="signout">Sign out</button>
+        <span id="sign-status" class="status"></span>
       </section>
 
       <section class="composer">
